force-app/main/default/objects/Account_Plan_Contact_Role__c/Account_Plan_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>&quot;The &apos;Account Plan Roles&apos; object represents the contacts that play a crucial role in achieving the goals set in the Account Plan. It allows users to associate and manage the key contacts involved in executing the strategies outlined in the Account Plan.</description>
    <label>Account Plan Contact Rol</label>
    <nameField>
        <displayFormat>APCR-{0}</displayFormat>
        <label>Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Contact Rollen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>