force-app/main/default/objects/Account_Plan_Contact_Role__c/fields/ContactNameForm__c.field-meta.xml
<CustomField>
    <fullName>ContactNameForm__c</fullName>
    <description>Show a clickable link in the listview</description>
    <formula>HYPERLINK(ContactRef__c, ContactRef__r.FullNameForm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>