force-app/main/default/objects/Account_Plan_Contact_Role__c/fields/ContactRef__c.field-meta.xml
<CustomField>
    <fullName>ContactRef__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Plan Contact Roles</relationshipLabel>
    <relationshipName>Account_Plan_Contact_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>