force-app/main/default/objects/Account_Plan_Contact_Role__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Job function</description>
    <inlineHelpText>What function does this person have?</inlineHelpText>
    <label>Function</label>
    <type>TextArea</type>
</CustomField>