force-app/main/default/objects/Account_Plan_Contact_Role__c/fields/RelationshipStrengthPick__c.field-meta.xml
<CustomField>
    <fullName>RelationshipStrengthPick__c</fullName>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will Recommend You</fullName>
            </value>
            <value>
                <fullName>Strong Supporter</fullName>
            </value>
            <value>
                <fullName>Supporter of Yours</fullName>
            </value>
            <value>
                <fullName>Interested in You</fullName>
            </value>
            <value>
                <fullName>Sees You Same As Everyone Else</fullName>
            </value>
            <value>
                <fullName>Mildly Negative</fullName>
            </value>
            <value>
                <fullName>Strongly for Competition</fullName>
            </value>
            <value>
                <fullName>Will Recommend Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>