force-app/main/default/objects/Account_Plan_Contact_Role__c/fields/RolePick__c.field-meta.xml
<CustomField>
    <fullName>RolePick__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Business Influencer</fullName>
            </value>
            <value>
                <fullName>Technical Influencer</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Financial Approver</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>